# BetterDraw

./: .gitignore  build.sh  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  storage.rs
src-tauri/src/commands/: drawings.rs  export.rs  mod.rs  versions.rs
src/components/Canvas/: Canvas.css  Canvas.tsx
src/components/HistoryPanel/: HistoryPanel.css  HistoryPanel.tsx
src/components/ImportDialog/: ImportDialog.css  ImportDialog.tsx
src/components/ScreenshotOverlay/: ScreenshotOverlay.css  ScreenshotOverlay.tsx
src/components/Sidebar/: DrawingItem.css  DrawingItem.tsx  Sidebar.css  Sidebar.tsx
src/components/Toolbar/: Toolbar.css  Toolbar.tsx
src/hooks/: useAutoSave.ts  useDrawings.ts  useExcalidrawApi.ts
src/services/: tauriCommands.ts
src/types/: index.ts
