[package]
name = "betterdraw"
version = "0.1.0"
description = "A native macOS drawing app"
authors = ["sidpremkumar"]
edition = "2021"

[lib]
name = "betterdraw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
window-vibrancy = "0.5"
objc = "0.2"
